# PriceStat

./: Cargo.toml  Dockerfile  README.md  build.gradle  pom.xml  settings.gradle
plots/: plot.py
src/main/java/io/csv/: CsvLineParser.java  CsvPipeline.java  DeadLetterStore.java  LineRepairer.java  Normalization.java
src/main/java/io/sql/: CopyInserter.java  DataBaseUtil.java
src/main/java/io/zip/: ZipReader.java
src/main/java/jobs/: DownloadDateAndInsert.java
src/main/java/net/: NetworkingClient.java
src/main/java/net/sleepy/: PriceStat.java  RustFFM.java  Test4.java
src/main/java/net/sleepy/io/csv/: CsvLineParser.java  CsvPipeline.java  DeadLetterStore.java  LineRepairer.java  Normalization.java
src/main/java/net/sleepy/io/sql/: CopyInserter.java  DataBaseUtil.java
src/main/java/net/sleepy/io/zip/: ZipReader.java
src/main/java/net/sleepy/jobs/: DateZipJob.java  DownloadDateAndInsert.java
src/main/java/net/sleepy/main/java/io/csv/: Normalization.java
src/main/java/net/sleepy/main/java/io/zip/: ZipReader.java
src/main/java/net/sleepy/main/java/net/: NetworkingClient.java
src/main/java/net/sleepy/net/: NetworkingClient.java
src/main/java/net/sleepy/util/: DateUtils.java
src/main/resources/schema/: product.sql
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
src/net/sleepy/main/java/io/csv/: CsvLineParser.java  CsvPipeline.java  DeadLetterStore.java  LineRepairer.java
src/net/sleepy/main/java/io/sql/: CopyInserter.java  DataBaseUtil.java
src/net/sleepy/main/java/jobs/: DownloadDateAndInsert.java
