[package]
name = "price_stat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
zip = "8.6.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3" # Required for the COPY sink
csv = "1.3"
